fix scroll overflow

--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,7 +1,6 @@
 body {
     background-image: url("../../public/login-background.jpg");
     background-size: cover;
-    overflow: hidden;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 }
